Update changelog for 2.4.1-0alpha6 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+immich (2.4.1-0alpha6) unstable; urgency=medium
+
+  * separated db requirement packages for each postgresql version to be able to define specific compatible extension versions
+
+ -- dionysius <dragon.dionysius@gmail.com>  Sun, 11 Jan 2026 18:01:27 +0100
+
 immich (2.4.1-0alpha5) unstable; urgency=medium
 
   * don't start immich-server on install which needs configuration
