--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-immich (2.4.1-0alpha7) unstable; urgency=medium
+immich (2.4.1-0alpha8) unstable; urgency=medium
 
+  * also rename in install template
   * rename files to install
   * separated db requirement packages for each postgresql version to be able to define specific compatible extension versions
 
