--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+immich (2.4.1-0alpha10) unstable; urgency=medium
+
+  * use conflicts to limit upper bounds of pg extensions
+
+ -- dionysius <dragon.dionysius@gmail.com>  Mon, 12 Jan 2026 09:29:53 +0100
+
 immich (2.4.1-0alpha9) unstable; urgency=medium
 
   * only upper bounds for db-reqs
