--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+immich (2.4.1-0alpha13) unstable; urgency=medium
+
+  * shell expansion seem not to be available in maintscripts
+
+ -- dionysius <dragon.dionysius@gmail.com>  Mon, 12 Jan 2026 13:07:00 +0100
+
 immich (2.4.1-0alpha12) unstable; urgency=medium
 
   * revert to generic dependencies without version constraints
