--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+immich (2.4.1-0alpha15) unstable; urgency=medium
+
+  * limit state directories permissions only to immich
+  * set python version on minor level
+  * set xdg cache since many python libs seem to like to cache things
+  * add mimalloc to machine-learning
+
+ -- dionysius <dragon.dionysius@gmail.com>  Wed, 14 Jan 2026 10:54:16 +0100
+
 immich (2.4.1-0alpha14) unstable; urgency=medium
 
   * fix pg version parsing
